--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body> 
      <section class="header">
-        <a href="index.html"><img src="..img/Gym logo (2).png" class="logo" alt="no limits gym logo"></a>
+        <a href="index.html"><img src="img/Gym logo (2).png" class="logo" alt="no limits gym logo"></a>
         <div>
             <ul class="navbar">
                 <li><a class="active" href="index.html">HOME</a></li>
