--- a/memberships.html
+++ b/memberships.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body> 
+ 
+<!-- Navigation -->
+ 
     <section class="header">
         <a href="#"><img src="img/Gym logo (2).png" class="logo" alt="no limits gym logo"></a>
         <div>
@@ -24,7 +27,8 @@
             </ul>
         </div>
 
-
+<!-- Memberships header section -->
+     
     </section>
     <section class="memberships-page">
         <div class="wrapper">
@@ -37,9 +41,13 @@
         </div>
     </section>
 
+<!-- Memberships Footer section -->
+ 
     <footer>
         <div class="wrapper">
                 <img src="img/Gym logo (2).png" class="logo" alt="no limits gym logo">
+                <div id="wcb" class="carbonbadge"></div>
+                <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
                 <p>2025 All rights reserved.</p>
         </div>
     </footer>
