--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body> 
      <section class="header">
-        <a href="index.html"><img src="img/Gym logo (2).png" class="logo" alt="no limits gym logo"></a>
+        <a href="index.html"><img src="img/Gym_logo_.png" class="logo" alt="no limits gym logo"></a>
         <div>
             <ul class="navbar">
                 <li><a class="active" href="index.html">HOME</a></li>
@@ -66,9 +66,7 @@
 
 <footer>
     <div class="wrapper">
-            <img src="img/Gym logo (2).png" class="logo" alt="no limits gym logo">
-       <div class="wcb" class="carbonbadge"></div>
-            <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+            <img src="img/Gym_logo_.png" class="logo" alt="no limits gym logo">
             <p>2025 All rights reserved.</p>
     </div>
 </footer>
