--- a/memberships.html
+++ b/memberships.html
@@ -15,7 +15,7 @@
 <!-- Navigation -->
  
     <section class="header">
-        <a href="#"><img src="img/Gym logo (2).png" class="logo" alt="no limits gym logo"></a>
+        <a href="#"><img src="img/Gym_logo_.png" class="logo" alt="no limits gym logo"></a>
         <div>
             <ul class="navbar">
                 <li><a href="index.html">HOME</a></li>
@@ -45,7 +45,7 @@
  
     <footer>
         <div class="wrapper">
-                <img src="img/Gym logo (2).png" class="logo" alt="no limits gym logo">
+                <img src="img/Gym_logo_.png" class="logo" alt="no limits gym logo">
                 <p>2025 All rights reserved.</p>
         </div>
     </footer>
