--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         <div class="wrapper">
             <div class="two-column">
                 <div>
-                    <img class="rounded" src="img/meet the team.jpg" alt="Picture of Team members smiling">
+                    <img class="rounded" src="img/meet_the_team.jpg" alt="Picture of Team members smiling">
                 </div>
                 <div>
                     <h2>MEET THE TEAM</h2>
