--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
             <div class="line"></div>
             <p>Move forward, stay committed, and see real results with expert support and world-class facilities.</p>
         </div>
+     </div>
 </section>
 
 <section class="contact-us" class="container">
@@ -73,7 +74,7 @@
                         <div class="text">
                             <h6>ADDRESS</h6>
                             <p>
-                            15, Tern Crescent, <br />
+                            15, Tern Crescent, <br/>
                             Chichester, PO20 2EP
                             </p>
                         </div>
