--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Coursework Gym Website -->
+<!-- Coursework Gym Website about page for Web Management And Development - M30875 - WEB PROJECT 1 - up2307500 -->
  <html lang="en">
 <head>
     <meta charset ="UTF-8">
