--- a/what.html
+++ b/what.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Coursework Gym Website -->
+<!-- Coursework Gym Website whatson page for Web Management And Development - M30875 - WEB PROJECT 1 - up2307500 -->
  <html lang="en">
 <head>
     <meta charset ="UTF-8">
@@ -40,7 +40,7 @@
     <footer>
         <div class="wrapper">
                 <img src="img/Gym_logo_.png" class="logo" alt="no limits gym logo">
-                <p>2025 All rights reserved.</p>
+                <p>up2307500 - 2025 All rights reserved.</p>
         </div>
     </footer>
     
