--- a/contact.html
+++ b/contact.html
@@ -89,6 +89,6 @@
 <footer>
     <div class="wrapper">
             <img src="img/Gym_logo_.png" class="logo" alt="no limits gym logo">
-            <p>2025 All rights reserved.</p>
+            <p>up2307500 - 2025 All rights reserved</p>
     </div>
 </footer>
