--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body> 
-     <section class="header">
+     <header class="header">
         <a href="index.html"><img src="img/Gym_logo_.png" class="logo" alt="no limits gym logo"></a>
         <div>
             <ul class="navbar">
@@ -23,7 +23,7 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
-    </section>
+      </header>
 
 <section class="hero-section">
     <div class="hero-container"> 
