--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body> 
-    <section class="header">
+    <header class="header">
         <a href="index.html"><img src="img/Gym_logo_.png" class="logo" alt="no limits gym logo"></a>
         <div>
             <ul class="navbar">
@@ -23,7 +23,7 @@
                 <li><a class="active" href="contact.html">CONTACT</a></li>
             </ul>
         </div>
-    </section> 
+    </header> 
 
 <section class="contact-page-header">
     <div class="wrapper">
@@ -35,7 +35,7 @@
      </div>
 </section>
 
-<section class="contact-us" class="container">
+<section class="contact-us container">
     <div class="wrapper">
         <div class="two-column">
             <form action="#">
@@ -74,7 +74,7 @@
                         <div class="text">
                             <h6>ADDRESS</h6>
                             <p>
-                            15, Tern Crescent, <br/>
+                            15, Tern Crescent, <br>
                             Chichester, PO20 2EP
                             </p>
                         </div>
