--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body> 
-    <section class="header">
+    <header class="header">
         <a href="#"><img src="img/Gym_logo_.png" class="logo" alt="no limits gym logo"></a>
         <div>
             <ul class="navbar">
@@ -23,9 +23,8 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
-
-
-    </section>
+    </header>
+     
     <section class="about-us-page">
         <div class="wrapper">
             <div class="about-us-page-content">
