--- a/gym.html
+++ b/gym.html
@@ -5,13 +5,11 @@
     <meta charset ="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> No limits | Gym Center</title>
-    <!-- Linking 'font Awesome' for icons-->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <!-- Linking CSS -->
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body> 
-    <section class="header">
+    <header class="header">
         <a href="#"><img src="img/Gym_logo_.png" class="logo" alt="no limits gym logo"></a>
         <div>
             <ul class="navbar">
@@ -23,9 +21,8 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
-
-
-    </section>
+    </header>
+     
     <section class="gym-page">
         <div class="wrapper">
             <div class="gym-page-content">
