--- a/memberships.html
+++ b/memberships.html
@@ -5,8 +5,6 @@
     <meta charset ="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> No limits | Gym Center</title>
-    <!-- Linking 'font Awesome' for icons-->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <!-- Linking CSS -->
     <link rel="stylesheet" href="CSS/style.css">
 </head>
@@ -14,7 +12,7 @@
  
 <!-- Navigation -->
  
-    <section class="header">
+    <header class="header">
         <a href="#"><img src="img/Gym_logo_.png" class="logo" alt="no limits gym logo"></a>
         <div>
             <ul class="navbar">
@@ -25,11 +23,10 @@
                 <li><a href="about.html">ABOUT US</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
-        </div>
+        </div>    
+    </header>
 
-<!-- Memberships header section -->
-     
-    </section>
+ <!-- Memberships header/hero section -->
     <section class="memberships-page">
         <div class="wrapper">
             <div class="memberships-page-content">
